--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     padding: 5px;
   }
   
-  h1{background-color: red;
-  color: yellow}
-  h2{background-color: red; 
-  color: yellow}
+  h1{background-color: DeepPink;
+  color: White}
+  h2{background-color: Bisque; 
+  color: Black}
   p{font-family: "Times New Roman", serif; 
-    background-color: gold; 
-    color: blue;
-    width: 500px;
+    background-color: LavenderBlush; 
+    color: Black;
+    width: 530px;
     padding: 25px;
   }
   
-  a{color: red}
+  a{color: deeppink}
   
 </style>
   </head>
